<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/titleTextView"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/eingabeKMEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eingabeKMEditText"
        android:inputType="number" />

    <EditText
        android:id="@+id/getankteLiterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/getankteLiterEditText"
        android:inputType="number" />

    <TextView
        android:id="@+id/ergTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ergEditText"
        android:textSize="24sp" />

    <Button
        android:id="@+id/umrechenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/umrechenButton" />

    <Button
        android:id="@+id/btnChangeLangView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnChangeLangView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</LinearLayout>